--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 .main{display:flex;justify-content:center;}
 .box{border:1px solid #000;width:500px;text-align:center;margin:0 10px}
 .item-img{width:400px}
+.resultBox{margin-top:50px;text-align:center}
